--- a/index.html
+++ b/index.html
@@ -1,58 +1,77 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>contributors - lyh-docs</title>
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.3.2/dist/html2canvas.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui/lib/theme-chalk/index.css">
-  <script src="https://cdn.jsdelivr.net/npm/element-ui/lib/index.js"></script>
-  <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/212184878">
-</head>
-<style>
-    .custom {
-        width: 60px;
-        height: 60px;
-        border-radius: 50%;
-        margin: 1px 1px;
+  <head>
+    <title>lyh-docs</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/element-ui/lib/theme-chalk/index.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/element-ui/lib/index.js"></script>
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://avatars.githubusercontent.com/u/212184878"
+    />
+  </head>
+  <style>
+    #app {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
     }
-</style>
-<body>
-
-  <div id="app">
-    <div v-for="item in items" :key="item.id" style="display: inline-block;">
-      <a :href="generateLink(item.username)" target="_blank">
-        <el-tooltip class="item" effect="dark" placement="top" :content="item.username">
-          <img :src="item.avatar" class="custom" @load="handleImageLoad(item)" />
-        </el-tooltip>
-      </a>
+    .custom {
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      margin: 1px;
+    }
+  </style>
+  <body>
+    <h1 style="text-align: center">Contributors</h1>
+    <div id="app">
+      <div v-for="item in items" :key="item.id" style="display: inline-block">
+        <a :href="generateLink(item.username)" target="_blank">
+          <el-tooltip
+            class="item"
+            effect="dark"
+            placement="top"
+            :content="item.username"
+          >
+            <img :src="item.avatar" class="custom" :alt="item.avatar" />
+          </el-tooltip>
+        </a>
+      </div>
     </div>
-  </div>
 
-  <script>
-    new Vue({
-      el: '#app',
-      data: {
-        items: [],
-      },
-      mounted() {
-        this.fetchData();
-      },
-      methods: {
-        fetchData() {
-          axios.get('contributors.json')
-            .then(response => {
-              this.items = response.data;
-            })
-            .catch(error => {
-              console.error(error);
-            });
+    <script>
+      new Vue({
+        el: "#app",
+        data: {
+          items: [],
         },
-        generateLink(username) {
-          return `https://github.com/${username}`;
+        mounted() {
+          this.fetchData();
         },
-      }
-    });
-  </script>
-</body>
+        methods: {
+          fetchData() {
+            axios
+              .get("contributors.json")
+              .then((response) => {
+                this.items = response.data;
+              })
+              .catch((error) => {
+                console.error(error);
+              });
+          },
+          generateLink(username) {
+            return `https://github.com/${username}`;
+          },
+        },
+      });
+    </script>
+  </body>
 </html>
